# lorawan-device-profiles

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  rust-toolchain.toml  shell.nix  taplo.toml
.github/workflows/: main.yml
interface/: Cargo.toml  Makefile  build.rs
interface/api/: api.proto
interface/api/grpc-web/: api_grpc_web_pb.d.ts  api_grpc_web_pb.js  api_pb.d.ts  api_pb.js  package.json
interface/src/: api.rs  main.rs  storage.rs  structs.rs
interface/src/js/: mod.rs
interface/ui/: index.html  package.json  vite.config.ts
interface/ui/src/: App.tsx  index.css  index.tsx
interface/ui/src/components/: Menu.tsx
interface/ui/src/stores/: DeviceProfileStore.ts
interface/ui/src/views/: helpers.ts
interface/ui/src/views/codecs/: CodecForm.tsx  CreateCodec.tsx  EditCodec.tsx  ListCodecs.tsx
interface/ui/src/views/devices/: CreateDevice.tsx  DeviceForm.tsx  EditDevice.tsx  ListDevices.tsx
interface/ui/src/views/profiles/: CreateProfile.tsx  EditProfile.tsx  ListProfiles.tsx  ProfileForm.tsx
interface/ui/src/views/vendors/: AddVendor.tsx  EditVendor.tsx  VendorForm.tsx
test-runner/: Cargo.toml
test-runner/src/: main.rs  structs.rs
test-runner/src/js/: mod.rs
vendors/HKT-SmartHard/: hkt-sdl-100 Smart Door Lock Decoder Chirpstack 4
vendors/HKT-SmartHard/hkt-dc-10 surface mounted parking sensor/: hkt-dc-10-payload-decoder-chirpstack
vendors/dragino/: vendor.toml
vendors/dragino/codecs/: ldds75.js  lds02.js  lht65n-e31f.js  lht65n.js  lt-22222-l.js  lwl02.js  test_decode_ldds75.json  test_decode_lds02.json  test_decode_lht65n.json  test_decode_lt-22222-l.json  test_decode_lwl02.json
vendors/dragino/devices/: ldds75.toml  lds02.toml  lht65n-e31f.toml  lht65n.toml  lt-22222-l.toml  lwl02.toml
vendors/dragino/profiles/: AS923-1_0_3-CLASS_C.toml  AS923-1_0_3.toml  AU915-1_0_3-CLASS_C.toml  AU915-1_0_3.toml  EU868-1_0_3-CLASS_C.toml  EU868-1_0_3.toml  US915-1_0_3-CLASS_C.toml  US915-1_0_3.toml
vendors/example-vendor/: vendor.toml
vendors/example-vendor/codecs/: example.js  test_decode_example.json  test_encode_example.json
vendors/example-vendor/devices/: example.toml
vendors/example-vendor/profiles/: example-EU868.toml
vendors/milesight/: vendor.toml
vendors/milesight/codecs/: test_decode_em300-th.json
vendors/milesight/devices/: milesight-em300-cl.toml  milesight-em300-di.toml  milesight-em300-mcs.toml  milesight-em300-mld.toml  milesight-em300-sld-zld.toml  milesight-em300-th.toml  milesight-em310-tilt.toml  milesight-em320-th.toml
vendors/milesight/profiles/: AS923-1_0_3.toml  AU915-1_0_3.toml  EU868-1_0_3.toml  US915-1_0_3.toml
vendors/rakwireless/: vendor.toml
vendors/rakwireless/codecs/: rak_standard.js  test_decode_example.json  test_decode_rak_standard.json
vendors/rakwireless/devices/: rak10702.toml  wisblock-api-v2.toml  wisblock-kit-1.toml  wisblock-kit-2.toml  wisblock-kit-4.toml  wisnode button 4k V2
vendors/rakwireless/profiles/: AS923_1_1_0_2.toml  AS923_2_1_0_2.toml  AS923_3_1_0_2.toml  AS923_4_1_0_2.toml  AU915_1_0_2.toml  (+5 more)
vendors/seeed-technology-co-ltd/: vendor.toml
(+22 files in other folders)
