[package]
  name = "lorawan-device-profiles-interface"
  description = "Interface to create and edit LoRaWAN(TM) device-profiles"
  repository = "https://github.com/chirpstack/lorawan-device-profiles"
  homepage = "https://www.chirpstack.io/"
  version = "4.0.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  publish = false
  license = "MIT"

[dependencies]
  clap = { version = "4.5", features = ["derive"] }
  serde = { version = "1.0", features = ["derive"] }
  serde_valid = "1.0"
  toml = "0.8"
  tonic = "0.13"
  tonic-web = "0.13"
  prost = "0.13"
  tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
  futures = "0.3"
  http = "1.3"
  http-body = "1.0"
  pin-project = "1.1"
  tower = "0.5"
  rust-embed = "8.7"
  mime_guess = "2.0"
  axum = "0.8"
  anyhow = "1.0"
  rquickjs = { version = "0.9", features = ["loader", "array-buffer"] }

[build-dependencies]
  tonic-build = "0.13"
